# l3af.me

./: Cargo.toml  Rocket.toml
assets/: fonts.css  main.css  svg.min.js  tailwind.css
src/: main.rs
templates/: base.html.tera
